# mooncrater-input

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example-config.py  xkb-layout_qwerty-mod-mooncrater.xkb  xkb-layout_qwerty-mod-mooncrater_compiled.xkb
nixos/: default.nix
scripts/: mooncrater-connect-all  mooncrater-evdev-event-dump-helper.py  mooncrater-evdev-list.py  mooncrater-generate-unicode-xcompose-from-unicodedata.py
src/mooncrater_input/: __init__.py  evdev_input.py  evdev_output.py  file_io.py  hatchak_kl1.py  hid_gadget_devices.py  keyboard_layout_1.py  macro_recorder.py  modifier_pipeline.py  mooncrater_input_lib.py  mouse_accumulator.py  remote.py  socket_input.py  uart_backend.py  unicode_handling.py  utils.py
src/mooncrater_input/hid_support/: __init__.py  keyboard.py  keycodes.py  mouse.py  write.py
tests/: README.md  pytest.ini  requirements-test.txt  test_hatchak_kl1.py  test_input_output.py  test_keyboard_layout_1.py  test_mouse_accumulator.py  test_socket_connection.py  test_tap_or_hold_specific.py  test_unicode_handling.py  test_zzz_remote_connection.py
