[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mooncrater-input"
version = "0.1.0"
description = "A flexible input remapping and keyboard layout system for Linux"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "William Hatch", email = "william@hatch.uno"}
]
keywords = ["input", "keyboard", "evdev", "hid", "remapping", "layout"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyserial",
    #"evdev-binary",
    "evdev",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/willghatch/mooncrater-input"
Issues = "https://github.com/willghatch/mooncrater-input/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mooncrater_input*"]
namespaces = false
